--- a/_posts/2016-06-04-test-page.md
+++ b/_posts/2016-06-04-test-page.md
@@ -15,12 +15,12 @@ Here, I will embedd image from local assets which goes into `assets` directory i
 ![my alternate text](/assets/test-page-image-1.jpg);
 ``` 
 
-![my alternate text](/assets/test-page-image-1.jpg);
+![my alternate text](/assets/test-page-image-2.jpg);
 
-Ofcourse, you can load images from web as well. Just point to image direct URL. For ex, here is one placeholder image:
+Ofcourse, you can load images from web as well. Just point to image direct URL. For ex, here is one placeholder image
 
 ```markdown
-![my alternate text](http://lorempixel.com/400/200);
+![my alternate text666666](http://lorempixel.com/400/20066);
 ``` 
 
 ![my alternate text](http://lorempixel.com/400/200);
